[gd_scene load_steps=69 format=4 uid="uid://cik1572nfyhhs"]

[ext_resource type="Texture2D" uid="uid://bs2505m7x1whu" path="res://Assets/sprites/gui.png" id="1_06t4h"]
[ext_resource type="Script" uid="uid://byco3wdibhbp1" path="res://Classes/Ui/main_buttons.gd" id="1_7vrkn"]
[ext_resource type="Script" uid="uid://ym6aq48xchmg" path="res://Classes/Ui/main_menu_gui.gd" id="2_oiatc"]
[ext_resource type="FontFile" uid="uid://d1uv461hk0yrw" path="res://Assets/fonts/camilla's-pixel.ttf" id="2_qe12f"]
[ext_resource type="Script" uid="uid://dm42hjdknv4mo" path="res://Classes/Components/scene_transitor.gd" id="3_fu7sn"]
[ext_resource type="Texture2D" uid="uid://d3tw1r6jx1n4g" path="res://Assets/sprites/arrow_cursor.png" id="6_nlkkf"]
[ext_resource type="PackedScene" uid="uid://0s1oblrv5a3d" path="res://Classes/Dungeon/dungeon_scene.tscn" id="6_oiatc"]
[ext_resource type="Script" uid="uid://byf3vj635f6vj" path="res://Classes/Ui/settings_gui.gd" id="8_8u0te"]
[ext_resource type="Texture2D" uid="uid://coh4f1ewimmmg" path="res://Assets/sprites/dungeon_tileset.png" id="8_cm266"]
[ext_resource type="Script" uid="uid://d0xjwtxpq4r5q" path="res://Classes/Pickup/ammo_pickup.gd" id="9_g8g3n"]
[ext_resource type="PackedScene" uid="uid://hsk4hy2rnrkf" path="res://Classes/Hazards/spikes.tscn" id="10_8u0te"]
[ext_resource type="PackedScene" uid="uid://cheqatgfprcfd" path="res://Classes/Hazards/saw_spawn.tscn" id="11_oiatc"]
[ext_resource type="Texture2D" uid="uid://bapq84bnxeq4l" path="res://Assets/sprites/dev_blocks.png" id="12_mg3m2"]
[ext_resource type="PackedScene" uid="uid://bvmpb2w3hvuw4" path="res://Classes/Props/start_door.tscn" id="13_ojb7r"]
[ext_resource type="PackedScene" uid="uid://8ummr1aq51gg" path="res://Classes/Props/entrance_door.tscn" id="14_e5qqf"]
[ext_resource type="PackedScene" uid="uid://ue62rlumwdxh" path="res://Classes/Props/exit_door.tscn" id="15_7bbuq"]
[ext_resource type="Texture2D" uid="uid://csc4lbkl6ail8" path="res://Assets/sprites/character_sheets.png" id="16_g8g3n"]
[ext_resource type="PackedScene" uid="uid://w3ipc7py6m28" path="res://hud.tscn" id="17_8u0te"]
[ext_resource type="Script" uid="uid://wy5pqqkxool0" path="res://Classes/Components/audio_component.gd" id="19_mg3m2"]

[sub_resource type="LabelSettings" id="LabelSettings_8qtwp"]
font = ExtResource("2_qe12f")
font_size = 8

[sub_resource type="AtlasTexture" id="AtlasTexture_8qtwp"]
atlas = ExtResource("1_06t4h")
region = Rect2(96, 30, 88, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_7vrkn"]
atlas = ExtResource("1_06t4h")
region = Rect2(3, 47, 36, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_fu7sn"]
atlas = ExtResource("1_06t4h")
region = Rect2(3, 58, 36, 10)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_oiatc"]
load_path = "res://.godot/imported/gui.png-6b872e057cc29dc4a12abe790ca7a3e4.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_nlkkf"]
atlas = SubResource("CompressedTexture2D_oiatc")
region = Rect2(3, 91, 36, 10)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_mg3m2"]
load_path = "res://.godot/imported/gui.png-6b872e057cc29dc4a12abe790ca7a3e4.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_qe12f"]
atlas = SubResource("CompressedTexture2D_mg3m2")
region = Rect2(3, 102, 36, 10)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_ojb7r"]
load_path = "res://.godot/imported/gui.png-6b872e057cc29dc4a12abe790ca7a3e4.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_jix8l"]
atlas = SubResource("CompressedTexture2D_ojb7r")
region = Rect2(3, 69, 36, 10)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_e5qqf"]
load_path = "res://.godot/imported/gui.png-6b872e057cc29dc4a12abe790ca7a3e4.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_glbon"]
atlas = SubResource("CompressedTexture2D_e5qqf")
region = Rect2(3, 80, 36, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_ojb7r"]
atlas = ExtResource("1_06t4h")
region = Rect2(98, 83, 78, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_oiatc"]
atlas = ExtResource("1_06t4h")
region = Rect2(40, 102, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_mg3m2"]
atlas = ExtResource("1_06t4h")
region = Rect2(51, 102, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_g8g3n"]
atlas = ExtResource("1_06t4h")
region = Rect2(3, 113, 36, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_8u0te"]
atlas = ExtResource("1_06t4h")
region = Rect2(3, 124, 36, 10)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_cm266"]
texture = ExtResource("8_cm266")
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, 4, 7, 4, 7, 5, -8, 5)
5:1/0 = 0
5:1/0/physics_layer_1/polygon_0/points = PackedVector2Array(-7, -1, 8, -1, 8, 0, -7, 0)
5:1/0/physics_layer_1/polygon_0/one_way = true
6:1/0 = 0
6:1/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, -1, 8, -1, 8, 0, -8, 0)
6:1/0/physics_layer_1/polygon_0/one_way = true
7:1/0 = 0
7:1/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, -1, 7, -1, 7, 0, -8, 0)
7:1/0/physics_layer_1/polygon_0/one_way = true
5:2/0 = 0
5:2/0/physics_layer_1/polygon_0/points = PackedVector2Array(-1, -1, 8, -1, 8, 0, -1, 0)
5:2/0/physics_layer_1/polygon_0/one_way = true
6:2/0 = 0
6:2/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, -1, 8, -1, 8, 0, -8, 0)
6:2/0/physics_layer_1/polygon_0/one_way = true
7:2/0 = 0
7:2/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, -1, 1, -1, 1, 0, -8, 0)
7:2/0/physics_layer_1/polygon_0/one_way = true
1:6/0 = 0
1:7/0 = 0
1:8/0 = 0
2:8/0 = 0
2:7/0 = 0
2:6/0 = 0
3:6/0 = 0
3:7/0 = 0
3:8/0 = 0
4:6/0 = 0
4:7/0 = 0
5:6/0 = 0
5:7/0 = 0
6:6/0 = 0
6:7/0 = 0
9:2/0 = 0
10:2/0 = 0
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:1/0 = 0
13:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:2/0 = 0
13:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:3/0 = 0
13:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:3/0 = 0
14:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:3/0 = 0
15:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:2/0 = 0
15:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:1/0 = 0
15:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:1/0 = 0
14:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:5/0 = 0
13:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:5/0 = 0
14:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:5/0 = 0
15:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:6/0 = 0
8:7/0 = 0
9:6/0 = 0
9:7/0 = 0
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:3/0 = 0
6:3/0/physics_layer_1/polygon_0/points = PackedVector2Array(-7, -1, 7, -1, 7, 0, -7, 0)
6:3/0/physics_layer_1/polygon_0/one_way = true
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
13:8/0 = 0
8:8/0 = 0
8:9/0 = 0
9:9/0 = 0
9:8/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
9:3/0 = 0
1:5/0 = 0
2:5/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0

[sub_resource type="GDScript" id="GDScript_22jvo"]
script/source = "@icon(\"res://Assets/icons/icon_coin.png\")
extends base_character
class_name base_pickup
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_swtgx"]
size = Vector2(4, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p7tm2"]
size = Vector2(10, 3)

[sub_resource type="PackedScene" id="PackedScene_rxoh1"]
_bundled = {
"conn_count": 0,
"conns": PackedInt32Array(),
"editable_instances": [],
"names": PackedStringArray("base_pickup", "CharacterBody2D", "collision_layer", "collision_mask", "script", "metadata/_custom_type_script", "collision", "CollisionShape2D", "visible", "shape", "pickup_component", "Area2D", "collision_layer", "script", "metadata/_custom_type_script", "collision", "CollisionShape2D", "shape", "debug_color"),
"node_count": 4,
"node_paths": [NodePath("."), NodePath("."), NodePath("./pickup_component")],
"nodes": PackedInt32Array(-1, -1, 1, 0, -1, 4, 2, 0, 3, 1, 4, 2, 5, 3, 0, 1073741824, 0, 7, 6, -1, 2, 8, 4, 9, 5, 0, 1073741825, 0, 11, 10, -1, 3, 12, 6, 13, 7, 14, 8, 0, 1073741826, 0, 16, 15, -1, 2, 17, 9, 18, 10, 0),
"variants": [16, 0, SubResource("GDScript_22jvo"), "uid://c2djvxdicte83", false, SubResource("RectangleShape2D_swtgx"), 16, ExtResource("9_g8g3n"), "uid://disgmj8sw5l0w", SubResource("RectangleShape2D_p7tm2"), Color(1, 1, 0, 0.419608)],
"version": 3
}

[sub_resource type="TileSetScenesCollectionSource" id="TileSetScenesCollectionSource_g8g3n"]
resource_name = "pickups"
scenes/1/scene = SubResource("PackedScene_rxoh1")

[sub_resource type="TileSetScenesCollectionSource" id="TileSetScenesCollectionSource_8u0te"]
resource_name = "hazards"
scenes/1/scene = ExtResource("10_8u0te")
scenes/2/scene = ExtResource("11_oiatc")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_oiatc"]
texture = ExtResource("12_mg3m2")
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/custom_data_0 = 1
5:1/0 = 0
4:2/0 = 0
4:2/0/custom_data_0 = 2

[sub_resource type="TileSetScenesCollectionSource" id="TileSetScenesCollectionSource_mg3m2"]
resource_name = "props"
scenes/1/scene = ExtResource("13_ojb7r")
scenes/2/scene = ExtResource("14_e5qqf")
scenes/3/scene = ExtResource("15_7bbuq")

[sub_resource type="TileSet" id="TileSet_ojb7r"]
physics_layer_0/collision_layer = 2
physics_layer_0/collision_mask = 0
physics_layer_1/collision_layer = 64
physics_layer_1/collision_mask = 0
custom_data_layer_0/name = "SpawnType"
custom_data_layer_0/type = 2
sources/3 = SubResource("TileSetAtlasSource_oiatc")
sources/0 = SubResource("TileSetAtlasSource_cm266")
sources/1 = SubResource("TileSetScenesCollectionSource_g8g3n")
sources/2 = SubResource("TileSetScenesCollectionSource_8u0te")
sources/5 = SubResource("TileSetScenesCollectionSource_mg3m2")

[sub_resource type="AtlasTexture" id="AtlasTexture_jy48h"]
atlas = ExtResource("16_g8g3n")
region = Rect2(16, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4igrx"]
atlas = ExtResource("16_g8g3n")
region = Rect2(16, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0dwkm"]
atlas = ExtResource("16_g8g3n")
region = Rect2(32, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_baqtb"]
atlas = ExtResource("16_g8g3n")
region = Rect2(48, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wscsg"]
atlas = ExtResource("16_g8g3n")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_88bh2"]
atlas = ExtResource("16_g8g3n")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hgsy7"]
atlas = ExtResource("16_g8g3n")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_76qvs"]
atlas = ExtResource("16_g8g3n")
region = Rect2(32, 144, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u73eo"]
atlas = ExtResource("16_g8g3n")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7f8n"]
atlas = ExtResource("16_g8g3n")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8s7r7"]
atlas = ExtResource("16_g8g3n")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_my3k2"]
atlas = ExtResource("16_g8g3n")
region = Rect2(64, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5shcc"]
atlas = ExtResource("16_g8g3n")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdxkg"]
atlas = ExtResource("16_g8g3n")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_j8lpi"]
atlas = ExtResource("16_g8g3n")
region = Rect2(16, 80, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_8u0te"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jy48h")
}],
"loop": false,
"name": &"air",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4igrx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0dwkm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_baqtb")
}],
"loop": false,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 3.0,
"texture": SubResource("AtlasTexture_wscsg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_88bh2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hgsy7")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_76qvs")
}],
"loop": false,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_u73eo")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_e7f8n")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_8s7r7")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_my3k2")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_5shcc")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_rdxkg")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j8lpi")
}],
"loop": true,
"name": &"stun",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_axgxu"]
atlas = ExtResource("6_nlkkf")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2tglh"]
atlas = ExtResource("6_nlkkf")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ft8vo"]
atlas = ExtResource("6_nlkkf")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2vb2k"]
atlas = ExtResource("6_nlkkf")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2fefn"]
atlas = ExtResource("6_nlkkf")
region = Rect2(64, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_qe12f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_axgxu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2tglh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ft8vo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2vb2k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2fefn")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="main_menu" type="Node2D"]

[node name="GUI" type="CanvasLayer" parent="."]
layer = 0
script = ExtResource("2_oiatc")

[node name="background" type="ColorRect" parent="GUI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.050980393, 0.050980393, 0.050980393, 1)

[node name="watermark" type="Label" parent="GUI"]
offset_left = 6.9999995
offset_top = 169.0
offset_right = 159.0
offset_bottom = 185.0
scale = Vector2(0.7, 0.7)
size_flags_vertical = 8
text = "developed by camilla"
label_settings = SubResource("LabelSettings_8qtwp")
vertical_alignment = 1

[node name="main" type="Control" parent="GUI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7vrkn")

[node name="MarginContainer" type="MarginContainer" parent="GUI/main"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
grow_vertical = 2
theme_override_constants/margin_left = 15

[node name="vbox" type="VBoxContainer" parent="GUI/main/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 8

[node name="game title" type="TextureRect" parent="GUI/main/MarginContainer/vbox"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
texture = SubResource("AtlasTexture_8qtwp")

[node name="play" type="TextureButton" parent="GUI/main/MarginContainer/vbox"]
layout_mode = 2
size_flags_horizontal = 0
focus_neighbor_left = NodePath("../quit")
focus_neighbor_right = NodePath("../settings")
texture_normal = SubResource("AtlasTexture_7vrkn")
texture_focused = SubResource("AtlasTexture_fu7sn")

[node name="scene_transitor" type="Node" parent="GUI/main/MarginContainer/vbox/play"]
script = ExtResource("3_fu7sn")
scene = ExtResource("6_oiatc")
metadata/_custom_type_script = "uid://dm42hjdknv4mo"

[node name="settings" type="TextureButton" parent="GUI/main/MarginContainer/vbox"]
layout_mode = 2
size_flags_horizontal = 0
focus_neighbor_left = NodePath("../play")
focus_neighbor_right = NodePath("../quit")
texture_normal = SubResource("AtlasTexture_nlkkf")
texture_focused = SubResource("AtlasTexture_qe12f")

[node name="quit" type="TextureButton" parent="GUI/main/MarginContainer/vbox"]
layout_mode = 2
size_flags_horizontal = 0
focus_neighbor_left = NodePath("../settings")
focus_neighbor_right = NodePath("../play")
texture_normal = SubResource("AtlasTexture_jix8l")
texture_focused = SubResource("AtlasTexture_glbon")

[node name="settings" type="Control" parent="GUI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("8_8u0te")

[node name="MarginContainer" type="MarginContainer" parent="GUI/settings"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
grow_vertical = 2
theme_override_constants/margin_left = 15

[node name="vbox" type="VBoxContainer" parent="GUI/settings/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 8

[node name="title" type="TextureRect" parent="GUI/settings/MarginContainer/vbox"]
layout_mode = 2
texture = SubResource("AtlasTexture_ojb7r")

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/settings/MarginContainer/vbox"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Label" type="Label" parent="GUI/settings/MarginContainer/vbox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "fullscreen"
label_settings = SubResource("LabelSettings_8qtwp")

[node name="fullscreen" type="TextureButton" parent="GUI/settings/MarginContainer/vbox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
focus_neighbor_left = NodePath("../../menu")
focus_neighbor_right = NodePath("../../HBoxContainer2/resolution")
toggle_mode = true
texture_normal = SubResource("AtlasTexture_oiatc")
texture_pressed = SubResource("AtlasTexture_mg3m2")

[node name="HBoxContainer2" type="HBoxContainer" parent="GUI/settings/MarginContainer/vbox"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Label" type="Label" parent="GUI/settings/MarginContainer/vbox/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
text = "resolutions"
label_settings = SubResource("LabelSettings_8qtwp")

[node name="resolution_text" type="Label" parent="GUI/settings/MarginContainer/vbox/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
text = "1280x720"
label_settings = SubResource("LabelSettings_8qtwp")

[node name="resolution" type="TextureButton" parent="GUI/settings/MarginContainer/vbox/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 8
focus_neighbor_left = NodePath("../../HBoxContainer/fullscreen")
focus_neighbor_right = NodePath("../../HBoxContainer3/screen_shake")

[node name="HBoxContainer3" type="HBoxContainer" parent="GUI/settings/MarginContainer/vbox"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Label" type="Label" parent="GUI/settings/MarginContainer/vbox/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 4
text = "enable screen shake"
label_settings = SubResource("LabelSettings_8qtwp")

[node name="screen_shake" type="TextureButton" parent="GUI/settings/MarginContainer/vbox/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
focus_neighbor_left = NodePath("../../HBoxContainer2/resolution")
focus_neighbor_right = NodePath("../../HBoxContainer5/music")
toggle_mode = true
button_pressed = true
texture_normal = SubResource("AtlasTexture_oiatc")
texture_pressed = SubResource("AtlasTexture_mg3m2")

[node name="HBoxContainer5" type="HBoxContainer" parent="GUI/settings/MarginContainer/vbox"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Label" type="Label" parent="GUI/settings/MarginContainer/vbox/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 4
text = "enable music"
label_settings = SubResource("LabelSettings_8qtwp")

[node name="music" type="TextureButton" parent="GUI/settings/MarginContainer/vbox/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
focus_neighbor_left = NodePath("../../HBoxContainer3/screen_shake")
focus_neighbor_right = NodePath("../../HBoxContainer6/sfx")
toggle_mode = true
button_pressed = true
texture_normal = SubResource("AtlasTexture_oiatc")
texture_pressed = SubResource("AtlasTexture_mg3m2")

[node name="HBoxContainer6" type="HBoxContainer" parent="GUI/settings/MarginContainer/vbox"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Label" type="Label" parent="GUI/settings/MarginContainer/vbox/HBoxContainer6"]
layout_mode = 2
size_flags_horizontal = 4
text = "enable sfx"
label_settings = SubResource("LabelSettings_8qtwp")

[node name="sfx" type="TextureButton" parent="GUI/settings/MarginContainer/vbox/HBoxContainer6"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
focus_neighbor_left = NodePath("../../HBoxContainer5/music")
focus_neighbor_right = NodePath("../../menu")
toggle_mode = true
button_pressed = true
texture_normal = SubResource("AtlasTexture_oiatc")
texture_pressed = SubResource("AtlasTexture_mg3m2")

[node name="menu" type="TextureButton" parent="GUI/settings/MarginContainer/vbox"]
layout_mode = 2
size_flags_horizontal = 0
focus_neighbor_left = NodePath("../HBoxContainer6/sfx")
focus_neighbor_right = NodePath("../HBoxContainer/fullscreen")
texture_normal = SubResource("AtlasTexture_g8g3n")
texture_focused = SubResource("AtlasTexture_8u0te")

[node name="ground" type="TileMapLayer" parent="GUI"]
tile_map_data = PackedByteArray("AAAKAAgAAAANAAEAAAAKAAkAAAANAAIAAAAKAAoAAAANAAIAAAARAAgAAAAPAAEAAAARAAkAAAAPAAIAAAARAAoAAAAPAAIAAAAJAAYAAAAAAAAAAAAJAAUAAAAAAAAAAAAJAAQAAAAAAAAAAAASAAYAAAAAAAAAAAASAAUAAAAAAAAAAAASAAQAAAAAAAAAAAALAAgAAAAOAAEAAAAMAAgAAAAOAAEAAAANAAgAAAAOAAEAAAAOAAgAAAAOAAEAAAAPAAgAAAAOAAEAAAAQAAgAAAAOAAEAAAAJAAcAAAAAAAAAAAASAAcAAAAAAAAAAAAKAAsAAAANAAIAAAARAAsAAAAPAAIAAAAKAAIAAAANAAMAAAARAAIAAAAPAAMAAAARAAAAAAAPAAIAAAARAAEAAAAPAAIAAAAKAAEAAAANAAIAAAAKAAAAAAANAAIAAAAMAAIAAAAOAAMAAAANAAIAAAAOAAMAAAAOAAIAAAAOAAMAAAAPAAIAAAAOAAMAAAAQAAIAAAAOAAMAAAALAAIAAAAOAAMAAAA=")
tile_set = SubResource("TileSet_ojb7r")

[node name="player_sprite" type="AnimatedSprite2D" parent="GUI"]
position = Vector2(259, 124)
sprite_frames = SubResource("SpriteFrames_8u0te")
animation = &"idle"
autoplay = "idle"
flip_h = true

[node name="arrow" type="AnimatedSprite2D" parent="GUI"]
position = Vector2(55, 94)
rotation = 1.5707964
sprite_frames = SubResource("SpriteFrames_qe12f")
autoplay = "default"

[node name="HUD" parent="." instance=ExtResource("17_8u0te")]

[node name="info_ui" parent="HUD/inGameUi" index="1"]
visible = false

[node name="death_ui" parent="HUD/inGameUi" index="3"]
visible = false

[node name="audio_component" type="Node" parent="."]
script = ExtResource("19_mg3m2")
metadata/_custom_type_script = "uid://wy5pqqkxool0"

[connection signal="ready" from="." to="audio_component" method="play_audio" binds= ["menu_music", Vector2(1, 1)]]
[connection signal="tree_exited" from="." to="audio_component" method="toggle_audio" binds= ["menu_music", false]]
[connection signal="pressed" from="GUI/main/MarginContainer/vbox/play" to="GUI/main/MarginContainer/vbox/play/scene_transitor" method="trans_change_scene"]
[connection signal="toggled" from="GUI/settings/MarginContainer/vbox/HBoxContainer/fullscreen" to="GUI/settings" method="_on_fullscreen_toggled"]
[connection signal="pressed" from="GUI/settings/MarginContainer/vbox/HBoxContainer2/resolution" to="GUI/settings" method="_on_resolution_pressed"]
[connection signal="toggled" from="GUI/settings/MarginContainer/vbox/HBoxContainer3/screen_shake" to="GUI/settings" method="_on_screen_shake_toggled"]
[connection signal="toggled" from="GUI/settings/MarginContainer/vbox/HBoxContainer5/music" to="GUI/settings" method="_on_music_toggled"]
[connection signal="toggled" from="GUI/settings/MarginContainer/vbox/HBoxContainer6/sfx" to="GUI/settings" method="_on_sfx_toggled"]

[editable path="HUD"]
